SharpMUSH.Generated/SharpMUSHBoolExpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/SharpMUSH/SharpMUSH.Generated/SharpMUSHBoolExpParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SharpMUSHBoolExpParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		OPEN=1, CLOSE=2, NOT=3, AND=4, OR=5, CARRY=6, OWNER=7, INDIRECT=8, EVALUATION=9, 
		EXACTOBJECT=10, FALSE=11, TRUE=12, NAME=13, BIT_FLAG=14, BIT_POWER=15, 
		BIT_TYPE=16, DBREFLIST=17, CHANNEL=18, IP=19, HOSTNAME=20, ATTRIBUTE_COLON=21, 
		STRING=22, ATTRIBUTENAME=23;
	public const int
		RULE_lock = 0, RULE_lockExprList = 1, RULE_lockAndExpr = 2, RULE_lockOrExpr = 3, 
		RULE_lockExpr = 4, RULE_notExpr = 5, RULE_falseExpr = 6, RULE_trueExpr = 7, 
		RULE_enclosedExpr = 8, RULE_ownerExpr = 9, RULE_carryExpr = 10, RULE_bitFlagExpr = 11, 
		RULE_bitPowerExpr = 12, RULE_bitTypeExpr = 13, RULE_channelExpr = 14, 
		RULE_dbRefListExpr = 15, RULE_ipExpr = 16, RULE_hostNameExpr = 17, RULE_nameExpr = 18, 
		RULE_exactObjectExpr = 19, RULE_attributeExpr = 20, RULE_evaluationExpr = 21, 
		RULE_indirectExpr = 22, RULE_string = 23, RULE_attributeName = 24;
	public static readonly string[] ruleNames = {
		"lock", "lockExprList", "lockAndExpr", "lockOrExpr", "lockExpr", "notExpr", 
		"falseExpr", "trueExpr", "enclosedExpr", "ownerExpr", "carryExpr", "bitFlagExpr", 
		"bitPowerExpr", "bitTypeExpr", "channelExpr", "dbRefListExpr", "ipExpr", 
		"hostNameExpr", "nameExpr", "exactObjectExpr", "attributeExpr", "evaluationExpr", 
		"indirectExpr", "string", "attributeName"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'!'", null, null, "'+'", "'$'", "'@'", "'/'", null, 
		null, null, null, null, null, null, null, null, null, null, "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OPEN", "CLOSE", "NOT", "AND", "OR", "CARRY", "OWNER", "INDIRECT", 
		"EVALUATION", "EXACTOBJECT", "FALSE", "TRUE", "NAME", "BIT_FLAG", "BIT_POWER", 
		"BIT_TYPE", "DBREFLIST", "CHANNEL", "IP", "HOSTNAME", "ATTRIBUTE_COLON", 
		"STRING", "ATTRIBUTENAME"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SharpMUSHBoolExpParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SharpMUSHBoolExpParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SharpMUSHBoolExpParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SharpMUSHBoolExpParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LockExprListContext lockExprList() {
			return GetRuleContext<LockExprListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SharpMUSHBoolExpParser.Eof, 0); }
		public LockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LockContext @lock() {
		LockContext _localctx = new LockContext(Context, State);
		EnterRule(_localctx, 0, RULE_lock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			lockExprList();
			State = 51;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LockExprListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LockAndExprContext lockAndExpr() {
			return GetRuleContext<LockAndExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LockOrExprContext lockOrExpr() {
			return GetRuleContext<LockOrExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LockExprContext lockExpr() {
			return GetRuleContext<LockExprContext>(0);
		}
		public LockExprListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lockExprList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLockExprList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LockExprListContext lockExprList() {
		LockExprListContext _localctx = new LockExprListContext(Context, State);
		EnterRule(_localctx, 2, RULE_lockExprList);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 53;
				lockAndExpr();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 54;
				lockOrExpr();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 55;
				lockExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LockAndExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LockExprContext lockExpr() {
			return GetRuleContext<LockExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(SharpMUSHBoolExpParser.AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LockExprListContext lockExprList() {
			return GetRuleContext<LockExprListContext>(0);
		}
		public LockAndExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lockAndExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLockAndExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LockAndExprContext lockAndExpr() {
		LockAndExprContext _localctx = new LockAndExprContext(Context, State);
		EnterRule(_localctx, 4, RULE_lockAndExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			lockExpr();
			State = 59;
			Match(AND);
			State = 60;
			lockExprList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LockOrExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LockExprContext lockExpr() {
			return GetRuleContext<LockExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR() { return GetToken(SharpMUSHBoolExpParser.OR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LockExprListContext lockExprList() {
			return GetRuleContext<LockExprListContext>(0);
		}
		public LockOrExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lockOrExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLockOrExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LockOrExprContext lockOrExpr() {
		LockOrExprContext _localctx = new LockOrExprContext(Context, State);
		EnterRule(_localctx, 6, RULE_lockOrExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			lockExpr();
			State = 63;
			Match(OR);
			State = 64;
			lockExprList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LockExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NotExprContext notExpr() {
			return GetRuleContext<NotExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnclosedExprContext enclosedExpr() {
			return GetRuleContext<EnclosedExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FalseExprContext falseExpr() {
			return GetRuleContext<FalseExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TrueExprContext trueExpr() {
			return GetRuleContext<TrueExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OwnerExprContext ownerExpr() {
			return GetRuleContext<OwnerExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CarryExprContext carryExpr() {
			return GetRuleContext<CarryExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IndirectExprContext indirectExpr() {
			return GetRuleContext<IndirectExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BitFlagExprContext bitFlagExpr() {
			return GetRuleContext<BitFlagExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BitPowerExprContext bitPowerExpr() {
			return GetRuleContext<BitPowerExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BitTypeExprContext bitTypeExpr() {
			return GetRuleContext<BitTypeExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ChannelExprContext channelExpr() {
			return GetRuleContext<ChannelExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DbRefListExprContext dbRefListExpr() {
			return GetRuleContext<DbRefListExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IpExprContext ipExpr() {
			return GetRuleContext<IpExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HostNameExprContext hostNameExpr() {
			return GetRuleContext<HostNameExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NameExprContext nameExpr() {
			return GetRuleContext<NameExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExactObjectExprContext exactObjectExpr() {
			return GetRuleContext<ExactObjectExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeExprContext attributeExpr() {
			return GetRuleContext<AttributeExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EvaluationExprContext evaluationExpr() {
			return GetRuleContext<EvaluationExprContext>(0);
		}
		public LockExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lockExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLockExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LockExprContext lockExpr() {
		LockExprContext _localctx = new LockExprContext(Context, State);
		EnterRule(_localctx, 8, RULE_lockExpr);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				notExpr();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67;
				enclosedExpr();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68;
				falseExpr();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 69;
				trueExpr();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 70;
				ownerExpr();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 71;
				carryExpr();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 72;
				indirectExpr();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 73;
				bitFlagExpr();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 74;
				bitPowerExpr();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 75;
				bitTypeExpr();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 76;
				channelExpr();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 77;
				dbRefListExpr();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 78;
				ipExpr();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 79;
				hostNameExpr();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 80;
				nameExpr();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 81;
				exactObjectExpr();
				}
				break;
			case 17:
				EnterOuterAlt(_localctx, 17);
				{
				State = 82;
				attributeExpr();
				}
				break;
			case 18:
				EnterOuterAlt(_localctx, 18);
				{
				State = 83;
				evaluationExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NotExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT() { return GetToken(SharpMUSHBoolExpParser.NOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LockExprContext lockExpr() {
			return GetRuleContext<LockExprContext>(0);
		}
		public NotExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_notExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NotExprContext notExpr() {
		NotExprContext _localctx = new NotExprContext(Context, State);
		EnterRule(_localctx, 10, RULE_notExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(NOT);
			State = 87;
			lockExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FalseExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FALSE() { return GetToken(SharpMUSHBoolExpParser.FALSE, 0); }
		public FalseExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_falseExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFalseExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FalseExprContext falseExpr() {
		FalseExprContext _localctx = new FalseExprContext(Context, State);
		EnterRule(_localctx, 12, RULE_falseExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(FALSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TrueExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRUE() { return GetToken(SharpMUSHBoolExpParser.TRUE, 0); }
		public TrueExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trueExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrueExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TrueExprContext trueExpr() {
		TrueExprContext _localctx = new TrueExprContext(Context, State);
		EnterRule(_localctx, 14, RULE_trueExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(TRUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnclosedExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN() { return GetToken(SharpMUSHBoolExpParser.OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LockExprListContext lockExprList() {
			return GetRuleContext<LockExprListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE() { return GetToken(SharpMUSHBoolExpParser.CLOSE, 0); }
		public EnclosedExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enclosedExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnclosedExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnclosedExprContext enclosedExpr() {
		EnclosedExprContext _localctx = new EnclosedExprContext(Context, State);
		EnterRule(_localctx, 16, RULE_enclosedExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(OPEN);
			State = 94;
			lockExprList();
			State = 95;
			Match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OwnerExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OWNER() { return GetToken(SharpMUSHBoolExpParser.OWNER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public OwnerExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ownerExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOwnerExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OwnerExprContext ownerExpr() {
		OwnerExprContext _localctx = new OwnerExprContext(Context, State);
		EnterRule(_localctx, 18, RULE_ownerExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(OWNER);
			State = 98;
			@string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CarryExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CARRY() { return GetToken(SharpMUSHBoolExpParser.CARRY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public CarryExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_carryExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCarryExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CarryExprContext carryExpr() {
		CarryExprContext _localctx = new CarryExprContext(Context, State);
		EnterRule(_localctx, 20, RULE_carryExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(CARRY);
			State = 101;
			@string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitFlagExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BIT_FLAG() { return GetToken(SharpMUSHBoolExpParser.BIT_FLAG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public BitFlagExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitFlagExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitFlagExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BitFlagExprContext bitFlagExpr() {
		BitFlagExprContext _localctx = new BitFlagExprContext(Context, State);
		EnterRule(_localctx, 22, RULE_bitFlagExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(BIT_FLAG);
			State = 104;
			@string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitPowerExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BIT_POWER() { return GetToken(SharpMUSHBoolExpParser.BIT_POWER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public BitPowerExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitPowerExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitPowerExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BitPowerExprContext bitPowerExpr() {
		BitPowerExprContext _localctx = new BitPowerExprContext(Context, State);
		EnterRule(_localctx, 24, RULE_bitPowerExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(BIT_POWER);
			State = 107;
			@string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BitTypeExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BIT_TYPE() { return GetToken(SharpMUSHBoolExpParser.BIT_TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public BitTypeExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitTypeExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBitTypeExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BitTypeExprContext bitTypeExpr() {
		BitTypeExprContext _localctx = new BitTypeExprContext(Context, State);
		EnterRule(_localctx, 26, RULE_bitTypeExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(BIT_TYPE);
			State = 110;
			@string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChannelExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHANNEL() { return GetToken(SharpMUSHBoolExpParser.CHANNEL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public ChannelExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_channelExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISharpMUSHBoolExpParserVisitor<TResult> typedVisitor = visitor as ISharpMUSHBoolExpParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChannelExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
